--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                       <img src="img/cr2.jpg" alt="" class="w-100 card-radius mt-4" />
                     </div>
 
-                    <div class="col-lg-4 d-none d-xl-block d-xxl-block">
+                    <div class="col-lg-4 d-none d-xl-block d-xxl-block d-lg-block">
                       <img src="img/cr1.jpg" alt="" class="w-100 card-radius" />
                       <img src="img/cowok.jpg" alt="" class="w-100 card-radius mt-4" />
                       <img src="img/cr2.jpg" alt="" class="w-100 card-radius mt-4" />
