--- a/index.html
+++ b/index.html
@@ -1,1 +1,298 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+
+    <!-- css-->
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css" />
+
+    <title>Wedding | Home</title>
+  </head>
+  <body>
+    <section id="content">
+      <div class="container-fluid">
+        <!-- slide 1 -->
+        <div class="row silde-satu">
+          <div class="col-lg-12 m-0 p-0 w-100">
+            <div id="carousel-satu" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="2000">
+                  <img src="img/cr1.jpg" class="d-block w-100" alt="..." />
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                  <img src="img/cr2.jpg" class="d-block w-100" alt="..." />
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                  <img src="img/cr3.jpg" class="d-block w-100" alt="..." />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- akhir slide 1 -->
+
+        <!-- content -->
+        <div class="row content justify-content-center">
+          <!-- info -->
+          <div class="col-lg-12 info text-center">
+            <h1 class="h1-info">OM SWASTYASTU</h1>
+            <p>
+              Atas Asung Kertha Wara Nugraha Ida Sang Hyang Widhi Wasa / Tuhan Yang Maha Esa, kami bermaksud mengundang Bapak/Ibu/Saudara/i <br />
+              pada acara Pawiwahan (Pernikahan) putra-putri kami pada :
+            </p>
+            <!-- card informasi -->
+            <div class="card-container-acara mt-5">
+              <div class="row justify-content-center">
+                <div class="col-lg-3">
+                  <div class="card text-center bg-transparent border-0">
+                    <p class="fs-1"><i class="bi bi-calendar2-week-fill"></i></p>
+                    <div class="card-body">
+                      <p class="card-text">Tanggal</p>
+                      <h3 class="card-title">23 Februari 2022</h3>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-3">
+                  <div class="card text-center bg-transparent border-0">
+                    <p class="fs-1"><i class="bi bi-clock-fill"></i></p>
+                    <div class="card-body">
+                      <p class="card-text">Waktu</p>
+                      <h3 class="card-title">09.00 - Selesai</h3>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-3">
+                  <div class="card text-center bg-transparent border-0">
+                    <p class="fs-1"><i class="bi bi-geo-alt-fill"></i></p>
+                    <div class="card-body">
+                      <p class="card-text">Alamat</p>
+                      <h3 class="card-title">Jalan Raya Sesetan No 516</h3>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- rasa syukur -->
+            <p class="mt-5">
+              Merupakan suatu kehormatan dan kebahagiaan bagi kami apabila Bapak/Ibu/Saudara/i berkenan hadir dan memberikan doa restu kepada putra-putri kami. <br />
+              Atas kehadiran serta doa restu Bapak/Ibu/Saudara/i, kami sekeluarga mengucapkan terima kasih. Kami yang berbahagia.
+            </p>
+            <h1 class="h1-info">YANTO & YANTI</h1>
+          </div>
+
+          <!-- acara -->
+          <div class="col-lg-12 acara">
+            <div class="judul text-center">
+              <h1 class="h1-judul">PEWIWAHAN</h1>
+              <p>Yadnya Human Ceremony</p>
+            </div>
+            <!-- card -->
+            <div class="card-container">
+              <div class="row justify-content-evenly">
+                <div class="col-lg-3 col-md-5 col-10">
+                  <div class="card card-1 m-0 p-0 border-0 bg-transparent shadow-lg card-radius">
+                    <img src="img/cewek.jpg" class="card-img-top img-content" alt="..." />
+                    <div class="card-body mt-5 text-center">
+                      <h4 class="card-title mb-3">Ni Wayan Yanti Mahendri</h4>
+                      <p class="card-text">Putri pertama dari pasangan</p>
+                      <p class="card-text fw-bold mb-2">I Wayan Mudia & Ni kadek Meri</p>
+                      <p class="card-text"><i class="bi bi-geo-alt-fill"></i> Jalan Siulan No 12 Penatih</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-3 col-md-5 col-10 card-2">
+                  <div class="card m-0 p-0 border-0 bg-transparent shadow-lg card-radius">
+                    <img src="img/cowok.jpg" class="card-img-top img-content" alt="..." />
+                    <div class="card-body mt-5 text-center">
+                      <h4 class="card-title mb-3">Putu Ary Raditya</h4>
+                      <p class="card-text">Putri pertama dari pasangan</p>
+                      <p class="card-text fw-bold mb-2">I Ketut Murna & Ni Luh Murniasih</p>
+                      <p class="card-text"><i class="bi bi-geo-alt-fill"></i> Jalan Raya Sesetan No 516</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- galery -->
+          <div class="col-lg-12 galery">
+            <div class="judul text-center">
+              <h1 class="h1-judul">GALLERY</h1>
+              <p>Photo & Video Collection</p>
+            </div>
+            <div class="card-container">
+              <div class="row justify-content-center">
+                <div class="col-lg-11 col-md-11">
+                  <div class="row justify-content-center">
+                    <div class="col-lg-4 col-md-6 col-6">
+                      <img src="img/cowok.jpg" alt="" class="w-100 card-radius" />
+                      <img src="img/cr1.jpg" alt="" class="w-100 card-radius mt-4" />
+                      <img src="img/cr2.jpg" alt="" class="w-100 card-radius mt-4" />
+                    </div>
+
+                    <div class="col-lg-4 d-none d-xl-block d-lg-block d-xxl-block">
+                      <img src="img/cr1.jpg" alt="" class="w-100 card-radius" />
+                      <img src="img/cowok.jpg" alt="" class="w-100 card-radius mt-4" />
+                      <img src="img/cr2.jpg" alt="" class="w-100 card-radius mt-4" />
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 col-6 mb-5">
+                      <img src="img/cr1.jpg" alt="" class="w-100 card-radius" />
+                      <img src="img/cr2.jpg" alt="" class="w-100 card-radius mt-4" />
+                      <img src="img/cowok.jpg" alt="" class="w-100 card-radius mt-4" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- caraosel -->
+          <div class="col-lg-12 waktu m-0 p-0">
+            <div id="carousel-dua" class="carousel slide-dua" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="2000">
+                  <img src="img/cr1.jpg" class="d-block w-100" alt="..." />
+                  <div class="carousel-caption">
+                    <div class="row justify-content-center">
+                      <div class="col-lg-1 col-md-2 col-3">
+                        <h1 class="fw-bold">01</h1>
+                        <p>Hari</p>
+                      </div>
+                      <div class="col-lg-1 col-md-2 col-3">
+                        <h1 class="fw-bold">12</h1>
+                        <p>Jam</p>
+                      </div>
+                      <div class="col-lg-1 col-md-2 col-3">
+                        <h1 class="fw-bold">52</h1>
+                        <p>Menit</p>
+                      </div>
+                      <div class="col-lg-1 col-md-2 col-3">
+                        <h1 class="fw-bold">04</h1>
+                        <p>Detik</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                  <img src="img/cr2.jpg" class="d-block w-100" alt="..." />
+                  <div class="carousel-caption">
+                    <div class="row justify-content-center">
+                      <div class="col-lg-1 col-md-2 col-3">
+                        <h1 class="fw-bold">01</h1>
+                        <p>Hari</p>
+                      </div>
+                      <div class="col-lg-1 col-md-2 col-3">
+                        <h1 class="fw-bold">12</h1>
+                        <p>Jam</p>
+                      </div>
+                      <div class="col-lg-1 col-md-2 col-3">
+                        <h1 class="fw-bold">52</h1>
+                        <p>Menit</p>
+                      </div>
+                      <div class="col-lg-1 col-md-2 col-3">
+                        <h1 class="fw-bold">04</h1>
+                        <p>Detik</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                  <img src="img/cr3.jpg" class="d-block w-100" alt="..." />
+                  <div class="carousel-caption">
+                    <div class="row justify-content-center">
+                      <div class="col-lg-1 col-md-2 col-3">
+                        <h1 class="fw-bold">01</h1>
+                        <p>Hari</p>
+                      </div>
+                      <div class="col-lg-1 col-md-2 col-3">
+                        <h1 class="fw-bold">12</h1>
+                        <p>Jam</p>
+                      </div>
+                      <div class="col-lg-1 col-md-2 col-3">
+                        <h1 class="fw-bold">52</h1>
+                        <p>Menit</p>
+                      </div>
+                      <div class="col-lg-1 col-md-2 col-3">
+                        <h1 class="fw-bold">04</h1>
+                        <p>Detik</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- kontak -->
+          <div class="col-lg-12 kontak">
+            <div class="judul text-center">
+              <h1 class="h1-judul">KONTAK</h1>
+              <p>location information & attendance book</p>
+            </div>
+            <div class="card-container">
+              <div class="row justify-content-center">
+                <div class="col-lg-11 col-md-11 col-11 py-5 kontak-container card-radius mb-5">
+                  <div class="row justify-content-evenly">
+                    <div class="col-lg-5 col-md-5 col-11">
+                      <iframe
+                        class="card-radius maps"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.894616656512!2d115.21712121529683!3d-8.701557091070834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd24110b802d94d%3A0xb6246c32603fed5f!2sJl.%20Raya%20Sesetan%20No.516%2C%20Sesetan%2C%20Denpasar%20Selatan%2C%20Kota%20Denpasar%2C%20Bali%2080223!5e0!3m2!1sid!2sid!4v1644219777731!5m2!1sid!2sid"
+                        width="100%"
+                        height="100%"
+                        allowfullscreen=""
+                        loading="lazy"
+                      ></iframe>
+                    </div>
+
+                    <div class="col-lg-5 col-md-5 col-11 mb-5">
+                      <form action="" method="post" class="form-container">
+                        <div class="form-floating mb-4">
+                          <input type="text" class="form-control" id="nama" name="nama" placeholder="nama lengkap" />
+                          <label for="nama">Nama Lengkap</label>
+                        </div>
+                        <div class="form-floating mb-4">
+                          <select class="form-select" id="kehadiran" name="kehadiran">
+                            <option selected>Pilih Kehadiran</option>
+                            <option value="1">Hadir</option>
+                            <option value="2">Masih Ragu</option>
+                            <option value="3">Tidak Hadir</option>
+                          </select>
+                          <label for="kehadiran">Status Kehadiran</label>
+                        </div>
+                        <div class="form-floating mb-4">
+                          <textarea class="form-control" id="ucapan" name="ucapan" placeholder="ucapan" style="height: 150px"></textarea>
+                          <label for="ucapan">Ucapan</label>
+                        </div>
+                        <button type="submit" class="btn btn-dark float-end">Kirim Ucapan</button>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- tutup div akhir -->
+          <div class="col-lg-12 footer d-flex align-items-center justify-content-center">
+            <p class="m-0 text-center">Cretae with <i class="bi bi-heart-fill text-danger"></i> by <a href="#" class="">pewiwahan.ku</a></p>
+          </div>
+        </div>
+        <!-- akhir content -->
+      </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  </body>
+</html>
 
