--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <!-- icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css" />
 
+    <!-- Gallery -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="assets/css/-Countdown-BS4-.css">
+    <link rel="stylesheet" href="assets/css/Basic-fancyBox-Gallery.css">
+    <link rel="stylesheet" href="assets/css/Bootstrap-4---Photo-Gallery.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
+    <link rel="stylesheet" href="assets/css/Simple-Slider.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+
     <title>Wedding | Home</title>
   </head>
   <body>
@@ -132,7 +143,7 @@
               <h1 class="h1-judul">GALLERY</h1>
               <p>Photo & Video Collection</p>
             </div>
-            <div class="card-container">
+            <!-- <div class="card-container">
               <div class="row justify-content-center">
                 <div class="col-lg-11 col-md-11">
                   <div class="row justify-content-center">
@@ -156,7 +167,20 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
+
+    <div class="container">
+        <div class="row flex-box flex-wrap-wrap">
+            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a class="fancybox" rel="gallery1" title="Hero Image Nature" href="img/cowok.jpg"><img class="img-fluid" src="img/cowok.jpg"></a></div>
+            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a class="fancybox" rel="gallery1" title="Hero Image Technology" href="img/cr1.jpg"><img class="img-fluid" src="img/cr1.jpg"></a></div>
+            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a class="fancybox" rel="gallery1" title="Hero Image Travel" href="img/cr2.jpg"><img class="img-fluid" src="img/cr2.jpg"></a></div>
+            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a class="fancybox" rel="gallery1" title="Hero Image Food" href="assets/img/hero-background-food.jpg"><img class="img-fluid" src="assets/img/hero-background-food.jpg"></a></div>
+            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a class="fancybox" rel="gallery1" title="Hero Image Music" href="assets/img/hero-background-music.jpg"><img class="img-fluid" src="assets/img/hero-background-music.jpg"></a></div>
+            <div class="col-sm-4 flex-box flex-justify-center flex-align-center"><a class="fancybox" rel="gallery1" title="Hero Image Photography" href="assets/img/hero-background-photography.jpg"><img class="img-fluid" src="assets/img/hero-background-photography.jpg"></a></div>
+        </div>
+    </div>
+
+
           </div>
 
           <!-- caraosel -->
@@ -293,6 +317,15 @@
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- Gallery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.pack.js"></script>
+    <script src="assets/js/Basic-fancyBox-Gallery.js"></script>
+    <script src="assets/js/-Countdown-BS4-.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
+    <script src="assets/js/Simple-Slider.js"></script>
   </body>
 </html>
 
